# parallels

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: audit.yaml  ci.yaml  release.yaml
docs/: ARCHITECTURE.md
scripts/: random_output.sh  server_log.sh
src/: app.rs  event.rs  lib.rs  main.rs
src/buffer/: mod.rs  output.rs
src/command/: mod.rs  runner.rs
src/search/: mod.rs  searcher.rs
src/tui/: input.rs  mod.rs  renderer.rs  tab.rs  tab_manager.rs
src/tui/snapshots/: cargo_parallels__tui__renderer__tests__renderer_full_layout.snap  cargo_parallels__tui__renderer__tests__renderer_output_area_with_stdout_stderr.snap  cargo_parallels__tui__renderer__tests__renderer_status_bar_normal_mode.snap  cargo_parallels__tui__renderer__tests__renderer_status_bar_search_mode.snap  cargo_parallels__tui__renderer__tests__renderer_tab_bar_multiple_tabs.snap  cargo_parallels__tui__renderer__tests__renderer_tab_bar_single_tab.snap  parallels__tui__renderer__tests__renderer_full_layout.snap  parallels__tui__renderer__tests__renderer_output_area_with_stdout_stderr.snap  parallels__tui__renderer__tests__renderer_status_bar_normal_mode.snap  parallels__tui__renderer__tests__renderer_tab_bar_multiple_tabs.snap  parallels__tui__renderer__tests__renderer_tab_bar_single_tab.snap
