[package]
name = "cargo-parallels"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[[bin]]
name = "parallels"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
thiserror = "2.0"

[dev-dependencies]
insta = "1.42"
rstest = "0.24"
