[package]
name = "parallels"
version = "0.1.0"
authors = ["skanehira"]
edition = "2024"
description = "A TUI tool to run multiple commands in parallel and view their output in real-time"
license = "MIT"
repository = "https://github.com/skanehira/parallels"
homepage = "https://github.com/skanehira/parallels"
readme = "README.md"
keywords = ["tui", "parallel", "terminal", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "parallels"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
ansi-to-tui = "8.0"
tui-input = { version = "0.15", features = ["crossterm"] }
thiserror = "2.0"
nix = { version = "0.31", features = ["signal", "process"] }

[dev-dependencies]
insta = "1.46"
rstest = "0.26"
